added naive algorithm

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -45,6 +45,9 @@ chapterinoneline, % Uncomment to place the chapter title next to the number on o
 
 \usepackage[backend=bibtex,style=authoryear,natbib=true]{biblatex} % Use the bibtex backend with the authoryear citation style (which resembles APA)
 
+\usepackage[linesnumbered,lined,boxed]{algorithm2e}
+% \usepackage{algpseudocode}
+% \usepackage{algorithm}
 \addbibresource{example.bib} % The filename of the bibliography
 
 \usepackage[autostyle=true]{csquotes} % Required to generate language-dependent quotes in the bibliography
@@ -153,7 +156,6 @@ chapterinoneline, % Uncomment to place the chapter title next to the number on o
 \item Where the thesis is based on work done by myself jointly with others, I have made clear exactly what was done by others and what I have contributed myself .\\
 
 \end{itemize}
-
 
 
  
