added theorems and lemmas for deletion

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -52,6 +52,20 @@ chapterinoneline, % Uncomment to place the chapter title next to the number on o
 
 \usepackage[autostyle=true]{csquotes} % Required to generate language-dependent quotes in the bibliography
 
+\usepackage{amsmath}
+\usepackage{amsthm}
+\renewcommand{\qedsymbol}{\rule{0.7em}{0.7em}}
+% 
+% \usepackage{framed} % or, "mdframed"
+% \usepackage[framed]{ntheorem}
+
+% 
+\newtheorem{HXt}{Theorem}
+\newtheorem{HXl}{Lemma}
+\newtheorem{HXc}{Corollary}
+\newtheorem{HXd}{Definition}
+
+
 %----------------------------------------------------------------------------------------
 %	MARGIN SETTINGS
 %----------------------------------------------------------------------------------------
