--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -54,6 +54,9 @@ chapterinoneline, % Uncomment to place the chapter title next to the number on o
 
 \usepackage{amsmath}
 \usepackage{amsthm}
+\usepackage{xcolor}
+\usepackage{graphicx}
+\usepackage{amsfonts}
 \renewcommand{\qedsymbol}{\rule{0.7em}{0.7em}}
 % 
 % \usepackage{framed} % or, "mdframed"
@@ -64,7 +67,7 @@ chapterinoneline, % Uncomment to place the chapter title next to the number on o
 \newtheorem{HXl}{Lemma}
 \newtheorem{HXc}{Corollary}
 \newtheorem{HXd}{Definition}
-
+\newtheorem{HXf}{Fact}
 
 %----------------------------------------------------------------------------------------
 %	MARGIN SETTINGS
@@ -185,14 +188,6 @@ chapterinoneline, % Uncomment to place the chapter title next to the number on o
 % \cleardoublepage
 % 
 % %----------------------------------------------------------------------------------------
-% %	QUOTATION PAGE
-% %----------------------------------------------------------------------------------------
-% 
-% \vspace*{0.2\textheight}
-% 
-% \noindent\enquote{\itshape Thanks to my solid academic training, today I can write hundreds of words on virtually any topic without possessing a shred of information, which is how I got a good job in journalism.}\bigbreak
-% 
-% \hfill Dave Barry
 
 %----------------------------------------------------------------------------------------
 %	ABSTRACT PAGE
