--- a/thesis/example.bib
+++ b/thesis/example.bib
@@ -38,3 +38,10 @@
 	Url = {http://link.aip.org/link/?RSI/62/1/1},
 	Year = {1991}}
 
+  @misc{wiki:shur,
+    author = "{Wikipedia contributors}",
+    title = "Schur complement --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2020",
+    url = "https://en.wikipedia.org/w/index.php?title=Schur_complement&oldid=947233275",
+    note = "[Online; accessed 28-May-2020]"
+  }
