--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -57,7 +57,7 @@ chapterinoneline, % Uncomment to place the chapter title next to the number on o
 \usepackage{xcolor}
 \usepackage{graphicx}
 \usepackage{amsfonts}
-\renewcommand{\qedsymbol}{\rule{0.7em}{0.7em}}
+\renewcommand{\qedsymbol}{\rule{0.5em}{0.5em}}
 % 
 % \usepackage{framed} % or, "mdframed"
 % \usepackage[framed]{ntheorem}
@@ -300,7 +300,7 @@ The acknowledgments and the people to thank go here, don't forget to include you
 %	BIBLIOGRAPHY
 %----------------------------------------------------------------------------------------
 
-% \printbibliography[heading=bibintoc]
+\printbibliography[heading=bibintoc]
 
 %----------------------------------------------------------------------------------------
 
