Added lemma 1, and new PDF

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -57,6 +57,7 @@ chapterinoneline, % Uncomment to place the chapter title next to the number on o
 \usepackage{xcolor}
 \usepackage{graphicx}
 \usepackage{amsfonts}
+\usepackage{amssymb}
 \renewcommand{\qedsymbol}{\rule{0.5em}{0.5em}}
 % 
 % \usepackage{framed} % or, "mdframed"
