Finished deletion part

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -69,6 +69,7 @@ chapterinoneline, % Uncomment to place the chapter title next to the number on o
 \newtheorem{HXc}{Corollary}
 \newtheorem{HXd}{Definition}
 \newtheorem{HXf}{Fact}
+\newtheorem{HXcl}{Claim}
 
 %----------------------------------------------------------------------------------------
 %	MARGIN SETTINGS
