added more content

--- a/thesis/example.bib
+++ b/thesis/example.bib
@@ -1,3 +1,12 @@
+@inproceedings{harvey2016generating,
+  title={Generating random spanning trees via fast matrix multiplication},
+  author={Harvey, Nicholas JA and Xu, Keyulu},
+  booktitle={LATIN 2016: Theoretical Informatics},
+  pages={522--535},
+  year={2016},
+  organization={Springer}
+}
+
   @misc{wiki:shur,
     author = "{Wikipedia contributors}",
     title = "Schur complement --- {Wikipedia}{,} The Free Encyclopedia",
@@ -15,3 +24,40 @@
   year={2014},
   publisher={Springer London}
 }
+
+@article{COLBOURN1996268,
+title = "Two Algorithms for Unranking Arborescences",
+journal = "Journal of Algorithms",
+volume = "20",
+number = "2",
+pages = "268 - 281",
+year = "1996",
+issn = "0196-6774",
+doi = "https://doi.org/10.1006/jagm.1996.0014",
+url = "http://www.sciencedirect.com/science/article/pii/S0196677496900140",
+author = "Charles J. Colbourn and Wendy J. Myrvold and Eugene Neufeld",
+abstract = "Colbourn, Day, and Nel developed the first algorithm requiring at mostO(n3) arithmetic operations for ranking and unranking spanning trees of a graph (nis the number of vertices of the graph). We present two algorithms for the more general problem of ranking and unranking rooted spanning arborescences of a directed graph. The first is conceptually very simple and requiresO(n3) arithmetic operations. The second approach shows that the number of arithmetic operations can be reduced to the same as that of the best known algorithms for matrix multiplication."
+}
+
+@article{doi:10.1137/070684008,
+author = {Harvey, Nicholas J. A.},
+title = {Algebraic Algorithms for Matching and Matroid Problems},
+journal = {SIAM Journal on Computing},
+volume = {39},
+number = {2},
+pages = {679-702},
+year = {2009},
+doi = {10.1137/070684008},
+
+URL = { 
+        https://doi.org/10.1137/070684008
+    
+},
+eprint = { 
+        https://doi.org/10.1137/070684008
+    
+}
+
+}
+
+
