--- a/thesis/example.bib
+++ b/thesis/example.bib
@@ -61,3 +61,307 @@ eprint = {
 }
 
 
+@article{doi:10.1002/andp.18471481202,
+author = {Kirchhoff, G.},
+title = {Ueber die Auflösung der Gleichungen, auf welche man bei der Untersuchung der linearen Vertheilung galvanischer Ströme geführt wird},
+journal = {Annalen der Physik},
+volume = {148},
+number = {12},
+pages = {497-508},
+doi = {10.1002/andp.18471481202},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/andp.18471481202},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/andp.18471481202},
+year = {1847}
+}
+
+@article{doi:10.1137/120890971,
+author = {Frieze, Alan and Goyal, Navin and Rademacher, Luis and Vempala, Santosh},
+title = {Expanders via Random Spanning Trees},
+journal = {SIAM Journal on Computing},
+volume = {43},
+number = {2},
+pages = {497-513},
+year = {2014},
+doi = {10.1137/120890971},
+
+URL = { 
+        https://doi.org/10.1137/120890971
+    
+},
+eprint = { 
+        https://doi.org/10.1137/120890971
+    
+}
+
+}
+
+@inproceedings{10.5555/1496770.1496834,
+author = {Goyal, Navin and Rademacher, Luis and Vempala, Santosh},
+title = {Expanders via Random Spanning Trees},
+year = {2009},
+publisher = {Society for Industrial and Applied Mathematics},
+address = {USA},
+booktitle = {Proceedings of the Twentieth Annual ACM-SIAM Symposium on Discrete Algorithms},
+pages = {576–585},
+numpages = {10},
+location = {New York, New York},
+series = {SODA ’09}
+}
+  
+
+
+  @INPROCEEDINGS{6108216,  author={S. O. {Gharan} and A. {Saberi} and M. {Singh}},  booktitle={2011 IEEE 52nd Annual Symposium on Foundations of Computer Science},   title={A Randomized Rounding Approach to the Traveling Salesman Problem},   year={2011},  volume={},  number={},  pages={550-559}
+  }
+
+@book{10.5555/535891,
+author = {Colbourn, Charles J.},
+title = {The  Combinatorics of Network Reliability},
+year = {1987},
+isbn = {0195049209},
+publisher = {Oxford University Press, Inc.},
+address = {USA}
+}
+
+@article{doi:10.1002/net.3230200303,
+author = {Nel, Louis D. and Colbourn, Charles J.},
+title = {Combining monte carlo estimates and bounds for network reliability},
+journal = {Networks},
+volume = {20},
+number = {3},
+pages = {277-298},
+doi = {10.1002/net.3230200303},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/net.3230200303},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/net.3230200303},
+abstract = {Abstract A simplified model of a communications network is a probabilistic graph in which each edge operates with the same probability. The all-terminal reliability, or probability that all nodes are connected, can be expressed as a polynomial in the edge operation probability. The coefficients of this polynomial are obtained from an interval partitioning of the cographic matroid, and only the first few coefficients can be computed efficiently. One of the best sets of efficiently computable reliability bounds is the Ball-Provan bounds. These bounds are obtained using the efficiently computable coefficients and can be improved substantially if additional coefficients are known. In this paper, we develop a Monte Carlo method for estimating additional coefficients by randomly sampling over spanning trees of the network. Confidence intervals for all-terminal reliability are obtained by using these estimates as additional constraints in the Ball-Provan bounds. This approach has some advantages over conventional Monte Carlo point estimate methods. In particular, the computational complexity does not depend on the reliability of the network.},
+year = {1990}
+}
+
+@article{COLBOURN1989271,
+title = "Unranking and ranking spanning trees of a graph",
+journal = "Journal of Algorithms",
+volume = "10",
+number = "2",
+pages = "271 - 286",
+year = "1989",
+issn = "0196-6774",
+doi = "https://doi.org/10.1016/0196-6774(89)90016-3",
+url = "http://www.sciencedirect.com/science/article/pii/0196677489900163",
+author = "Charles J Colbourn and Robert P.J Day and Louis D Nel",
+abstract = "The set S of spanning trees of an n-vertex graph G can be placed in one-to-one correspondence with the integers in the interval [1, s], where s = |S|. We develop O(n3) unranking and ranking functions for the spanning trees of an arbitrary graph. The unranking function maps any interval [1, s] to the corresponding tree, while the ranking function maps a spanning tree to the appropriate index in the interval. The unranking function provides an O(n3) method for generating a random spanning tree of a graph with uniform distribution."
+}
+
+@article{COLBOURN1996268,
+title = "Two Algorithms for Unranking Arborescences",
+journal = "Journal of Algorithms",
+volume = "20",
+number = "2",
+pages = "268 - 281",
+year = "1996",
+issn = "0196-6774",
+doi = "https://doi.org/10.1006/jagm.1996.0014",
+url = "http://www.sciencedirect.com/science/article/pii/S0196677496900140",
+author = "Charles J. Colbourn and Wendy J. Myrvold and Eugene Neufeld",
+abstract = "Colbourn, Day, and Nel developed the first algorithm requiring at mostO(n3) arithmetic operations for ranking and unranking spanning trees of a graph (nis the number of vertices of the graph). We present two algorithms for the more general problem of ranking and unranking rooted spanning arborescences of a directed graph. The first is conceptually very simple and requiresO(n3) arithmetic operations. The second approach shows that the number of arithmetic operations can be reduced to the same as that of the best known algorithms for matrix multiplication."
+}
+
+@article{KULKARNI1990185,
+title = "Generating random combinatorial objects",
+journal = "Journal of Algorithms",
+volume = "11",
+number = "2",
+pages = "185 - 207",
+year = "1990",
+issn = "0196-6774",
+doi = "https://doi.org/10.1016/0196-6774(90)90002-V",
+url = "http://www.sciencedirect.com/science/article/pii/019667749090002V",
+author = "V.G Kulkarni",
+abstract = "Let E be a finite set and B be a given set of subsets of E. Let w(B) be a positive weight of B ∈ B. In this paper we develop an algorithm to generate a random subset U ∈ B such that the P(U = B) is proportioned to w(B). If the complexity of computing sums of the weights of B contained in set-intervals in B is O(f(∥E∥)), then the algorithm developed here has complexity O(∥E∥f(∥E∥)). The algorithm is specialized to the following cases: (i) B = all subsets of E, (ii) B = all subsets of E with k elements, (iii) B = all spanning trees in a network, and (iv) B = all paths in a directed acyclic network. Different types of weight functions are considered. It is shown that this proposed algorithm unifies many existing algorithms."
+}
+
+@InProceedings{10.1007/3-540-51687-5_27,
+author="Bar-Ilan, Judit
+and Zernik, Dror",
+editor="Bermond, Jean-Claude
+and Raynal, Michel",
+title="Random leaders and random spanning trees",
+booktitle="Distributed Algorithms",
+year="1989",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="1--12",
+abstract="The problem of distributively constructing a minimum spanning tree has been thoroughly studied. The root of this spanning tree is often elected as a leader, and then centralized algorithms are run in the distributed system. If, however, we have fault tolerance in mind, selecting a random spanning tree and a random leader are more desirable. If we manage to select a random tree, the probability that a bad channel will disconnect some nodes from the random tree is relatively small. Otherwise, a small number of predetermined edges will greatly effect the system's behavior.",
+isbn="978-3-540-46750-2"
+}
+
+
+@INPROCEEDINGS{63516,  author={A. {Broder}},  booktitle={30th Annual Symposium on Foundations of Computer Science},   title={Generating random spanning trees},   year={1989},  volume={},  number={},  pages={442-447},}
+
+@article{aldous1990random,
+  title={The random walk construction of uniform spanning trees and uniform labelled trees},
+  author={Aldous, David J},
+  journal={SIAM Journal on Discrete Mathematics},
+  volume={3},
+  number={4},
+  pages={450--465},
+  year={1990},
+  publisher={SIAM}
+}
+
+@inproceedings{10.1145/237814.237880,
+author = {Wilson, David Bruce},
+title = {Generating Random Spanning Trees More Quickly than the Cover Time},
+year = {1996},
+isbn = {0897917855},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/237814.237880},
+doi = {10.1145/237814.237880},
+booktitle = {Proceedings of the Twenty-Eighth Annual ACM Symposium on Theory of Computing},
+pages = {296–303},
+numpages = {8},
+location = {Philadelphia, Pennsylvania, USA},
+series = {STOC ’96}
+}
+
+@inproceedings{10.5555/1747597.1748019,
+author = {Kelner, Jonathan A. and Madry, Aleksander},
+title = {Faster Generation of Random Spanning Trees},
+year = {2009},
+isbn = {9780769538501},
+publisher = {IEEE Computer Society},
+address = {USA},
+booktitle = {Proceedings of the 2009 50th Annual IEEE Symposium on Foundations of Computer Science},
+pages = {13–21},
+numpages = {9},
+keywords = {spanning trees, random walks on graphs, electrical flows},
+series = {FOCS ’09}
+}
+  
+
+  
+
+
+
+
+
+
+@article{doi:10.1287/opre.2017.1603,
+author = {Asadpour, Arash and Goemans, Michel X. and Mądry, Aleksander and Gharan, Shayan Oveis and Saberi, Amin},
+title = {An O(log n/log log n)-Approximation Algorithm for the Asymmetric Traveling Salesman Problem},
+journal = {Operations Research},
+volume = {65},
+number = {4},
+pages = {1043-1061},
+year = {2017},
+doi = {10.1287/opre.2017.1603},
+
+URL = { 
+        https://doi.org/10.1287/opre.2017.1603
+    
+},
+eprint = { 
+        https://doi.org/10.1287/opre.2017.1603
+    
+}
+,
+    abstract = { We present a randomized O(log n/log log n)-approximation algorithm for the asymmetric traveling salesman problem (ATSP). This provides the first asymptotic improvement over the long-standing Θ(log n)-approximation bound stemming from the work of Frieze et al. (1982) [Frieze AM, Galbiati G, Maffioki F (1982) On the worst-case performance of some algorithms for the asymmetric traveling salesman problem. Networks 12(1):23–39]. The key ingredient of our approach is a new connection between the approximability of the ATSP and the notion of so-called thin trees. To exploit this connection, we employ maximum entropy rounding—a novel method of randomized rounding of LP relaxations of optimization problems. We believe that this method might be of independent interest. }
+}
+
+@inproceedings{10.1145/3055399.3055499,
+author = {Durfee, David and Kyng, Rasmus and Peebles, John and Rao, Anup B. and Sachdeva, Sushant},
+title = {Sampling Random Spanning Trees Faster than Matrix Multiplication},
+year = {2017},
+isbn = {9781450345286},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3055399.3055499},
+doi = {10.1145/3055399.3055499},
+booktitle = {Proceedings of the 49th Annual ACM SIGACT Symposium on Theory of Computing},
+pages = {730–742},
+numpages = {13},
+keywords = {Random Spanning Trees, Sampling Algorithm, Approximate Schur Complement, Graph Sparsification},
+location = {Montreal, Canada},
+series = {STOC 2017}
+}
+
+@inproceedings{10.1145/3188745.3188852,
+author = {Schild, Aaron},
+title = {An Almost-Linear Time Algorithm for Uniform Random Spanning Tree Generation},
+year = {2018},
+isbn = {9781450355599},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3188745.3188852},
+doi = {10.1145/3188745.3188852},
+booktitle = {Proceedings of the 50th Annual ACM SIGACT Symposium on Theory of Computing},
+pages = {214–227},
+numpages = {14},
+keywords = {Schur complements, random walks, random spanning trees},
+location = {Los Angeles, CA, USA},
+series = {STOC 2018}
+}
+
+@article{GUENOCHE1983214,
+title = "Random spanning tree",
+journal = "Journal of Algorithms",
+volume = "4",
+number = "3",
+pages = "214 - 220",
+year = "1983",
+issn = "0196-6774",
+doi = "https://doi.org/10.1016/0196-6774(83)90022-6",
+url = "http://www.sciencedirect.com/science/article/pii/0196677483900226",
+author = "A Guénoche",
+abstract = "Dans cet article, nous proposons un algorithme de complexité polynomiale pour construire un arbre au hasard qui soit un graphe partiel d'un graphe donné. Il consiste essentielleement à construire une arborescence de rang donné sur ce graphe, l'ensemble des arborescences étant ordonné par rapport aux valeurs croissantes de la racine et à racine égale suivant l'ordre lexicographique du codage utilisé pour les arborescences."
+}
+  
+
+  
+
+@article{Propp1998HowTG,
+  title={How to Get a Perfectly Random Sample from a Generic Markov Chain and Generate a Random Spanning Tree of a Directed Graph},
+  author={James Gary Propp and David Bruce Wilson},
+  journal={J. Algorithms},
+  year={1998},
+  volume={27},
+  pages={170-217}
+}
+
+@article{KANDEL1996171,
+title = "Shuffling biological sequences",
+journal = "Discrete Applied Mathematics",
+volume = "71",
+number = "1",
+pages = "171 - 185",
+year = "1996",
+issn = "0166-218X",
+doi = "https://doi.org/10.1016/S0166-218X(97)81456-4",
+url = "http://www.sciencedirect.com/science/article/pii/S0166218X97814564",
+author = "D. Kandel and Y. Matias and R. Unger and P. Winkler",
+abstract = "This paper considers the following sequence shuffling problem: Given a biological sequence (either DNA or protein) s, generate a random instance among all the permutations of s that exhibit the same frequencies of k-lets (e.g. dinucleotides, doublets of amino acids, triplets, etc.). Since certain biases in the usage of k-lets are fundamental to biological sequences, effective generation of such sequences is essential for the evaluation of the results of many sequence analysis tools. This paper introduces two sequence shuffling algorithms: A simple swapping-based algorithm is shown to generate a near-random instance and appears to work well, although its efficiency is unproven; a generation algorithm based on Euler tours is proven to produce a precisely uniform instance, and hence solve the sequence shuffling problem, in time not much more than linear in the sequence length."
+}
+
+@article{colbourn1988estimating,
+  title={Estimating the coefficients of the reliability polynomial},
+  author={Colbourn, Charles J and Debroni, Bradley M and Myrvold, Wendy J},
+  journal={Congressus Numerantium},
+  volume={62},
+  pages={217--223},
+  year={1988},
+  publisher={Utilitas Mathematica Pub. Incorporated}
+}
+
+@article{DBLP:journals/corr/abs-1005-0265,
+  author    = {Wai Shing Fung and
+               Nicholas J. A. Harvey},
+  title     = {Graph Sparsification by Edge-Connectivity and Random Spanning Trees},
+  journal   = {CoRR},
+  volume    = {abs/1005.0265},
+  year      = {2010},
+  url       = {http://arxiv.org/abs/1005.0265},
+  archivePrefix = {arXiv},
+  eprint    = {1005.0265},
+  timestamp = {Mon, 13 Aug 2018 16:48:40 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1005-0265.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
