--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -49,6 +49,7 @@ chapterinoneline, % Uncomment to place the chapter title next to the number on o
 % \usepackage{algpseudocode}
 % \usepackage{algorithm}
 \addbibresource{example.bib} % The filename of the bibliography
+% \bibliographystyle{acm}
 
 \usepackage[autostyle=true]{csquotes} % Required to generate language-dependent quotes in the bibliography
 
@@ -280,7 +281,7 @@ The acknowledgments and the people to thank go here, don't forget to include you
 \input{Chapters/Chapter2.tex} 
 \input{Chapters/Chapter3.tex} 
 \input{Chapters/Chapter4.tex}
-\input{Chapters/Chapter5.tex} 
+% \input{Chapters/Chapter5.tex} 
 \input{Chapters/Chapter6.tex}
 
 
