added circuit diagram

--- a/thesis/example.bib
+++ b/thesis/example.bib
@@ -365,3 +365,59 @@ abstract = "This paper considers the following sequence shuffling problem: Given
   biburl    = {https://dblp.org/rec/journals/corr/abs-1005-0265.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{dolev2016random,
+  title={Random Spanning Trees for Expanders, Sparsifiers, and Virtual Network Security},
+  author={Dolev, Shlomi and Khankin, Daniel},
+  journal={arXiv preprint arXiv:1612.02569},
+  year={2016}
+}
+
+
+@Article{a11040053,
+AUTHOR = {Russo, Luís M. S. and Teixeira, Andreia Sofia and Francisco, Alexandre P.},
+TITLE = {Linking and Cutting Spanning Trees},
+JOURNAL = {Algorithms},
+VOLUME = {11},
+YEAR = {2018},
+NUMBER = {4},
+ARTICLE-NUMBER = {53},
+URL = {https://www.mdpi.com/1999-4893/11/4/53},
+ISSN = {1999-4893},
+ABSTRACT = {We consider the problem of uniformly generating a spanning tree for an undirected connected graph. This process is useful for computing statistics, namely for phylogenetic trees. We describe a Markov chain for producing these trees. For cycle graphs, we prove that this approach significantly outperforms existing algorithms. For general graphs, experimental results show that the chain converges quickly. This yields an efficient algorithm due to the use of proper fast data structures. To obtain the mixing time of the chain we describe a coupling, which we analyze for cycle graphs and simulate for other graphs.},
+DOI = {10.3390/a11040053}
+}
+
+
+
+@article{10.1137/070684008,
+author = {Harvey, Nicholas J. A.},
+title = {Algebraic Algorithms for Matching and Matroid Problems},
+year = {2009},
+issue_date = {June 2009},
+publisher = {Society for Industrial and Applied Mathematics},
+address = {USA},
+volume = {39},
+number = {2},
+issn = {0097-5397},
+url = {https://doi.org/10.1137/070684008},
+doi = {10.1137/070684008},
+journal = {SIAM J. Comput.},
+month = jul,
+pages = {679–702},
+numpages = {24},
+keywords = {algebraic algorithms, matroid intersection, fast matrix multiplication, nonbipartite matching}
+}
+  
+@article{TCS-054,
+url = {http://dx.doi.org/10.1561/0400000054},
+year = {2013},
+volume = {8},
+journal = {Foundations and Trends® in Theoretical Computer Science},
+title = {Lx = b},
+doi = {10.1561/0400000054},
+issn = {1551-305X},
+number = {1–2},
+pages = {1-141},
+author = {Nisheeth K. Vishnoi}
+}
