--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -299,7 +299,7 @@ The acknowledgments and the people to thank go here, don't forget to include you
 
 \input{Chapters/Chapter1.tex}
 \input{Chapters/Chapter2.tex} 
-\input{Chapters/Chapter3.tex} 
+% \input{Chapters/Chapter3.tex} 
 \input{Chapters/Chapter4.tex}
 % \input{Chapters/Chapter5.tex} 
 \input{Chapters/Chapter6.tex}
