--- a/thesis/example.bib
+++ b/thesis/example.bib
@@ -421,3 +421,17 @@ number = {1–2},
 pages = {1-141},
 author = {Nisheeth K. Vishnoi}
 }
+
+@inproceedings{10.5555/2722129.2722263,
+author = {M\k{a}dry, Aleksander and Straszak, Damian and Tarnawski, Jakub},
+title = {Fast Generation of Random Spanning Trees and the Effective Resistance Metric},
+year = {2015},
+publisher = {Society for Industrial and Applied Mathematics},
+address = {USA},
+booktitle = {Proceedings of the Twenty-Sixth Annual ACM-SIAM Symposium on Discrete Algorithms},
+pages = {2019–2036},
+numpages = {18},
+location = {San Diego, California},
+series = {SODA ’15}
+}
+  
