progress in slides

--- a/thesis/example.bib
+++ b/thesis/example.bib
@@ -435,3 +435,9 @@ location = {San Diego, California},
 series = {SODA ’15}
 }
   
+@misc{snell,
+  title = {Uniform Spanning Trees},
+  author = {Snell},
+  note  =  {\url{https://www.math.upenn.edu/~pemantle/papers/snell.pdf}},
+  note = {Accessed: 10-6-2020},
+}
